--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         <li><a href="#">Meta Verified</a></li>
       </ul>
       <div class="bottom-footer">
-        <select name="" id="">
+        <!-- <select name="" id="">
           <option value="English">English</option>
           <option value="Hindi">Hindi</option>
           <option value="Punjabi">Punjabi</option>
           <option value="Urdu">Urdu</option>
           <option value="Francais">Francais</option>
-        </select>
+        </select> -->
         <!-- <span> &copy; 2023 Instagram from Meta</span> -->
         <p class="copyright">©2024 Instagram from Meta</p>
       </div>
